# kded

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KDEDConfig.cmake.in  KF6KDEDConfig.cmake.in  README.md  kded.yaml  metainfo.yaml  org.kde.kded5.desktop  org.kde.kded6.desktop
docs/: HOWTO
docs/kded5/: CMakeLists.txt  man-kded5.8.docbook
docs/kded6/: man-kded6.8.docbook
po/ca/docs/kded5/: man-kded5.8.docbook
po/ca/docs/kded6/: man-kded6.8.docbook
po/ca@valencia/docs/kded5/: man-kded5.8.docbook
po/ca@valencia/docs/kded6/: man-kded6.8.docbook
po/de/docs/kded5/: man-kded5.8.docbook
po/de/docs/kded6/: man-kded6.8.docbook
po/es/docs/kded5/: man-kded5.8.docbook
po/es/docs/kded6/: man-kded6.8.docbook
po/fr/docs/kded5/: man-kded5.8.docbook
po/fr/docs/kded6/: man-kded6.8.docbook
po/it/docs/kded5/: man-kded5.8.docbook
po/it/docs/kded6/: man-kded6.8.docbook
po/nl/docs/kded5/: man-kded5.8.docbook
po/nl/docs/kded6/: man-kded6.8.docbook
po/pt/docs/kded5/: man-kded5.8.docbook
po/pt_BR/docs/kded5/: man-kded5.8.docbook
po/pt_BR/docs/kded6/: man-kded6.8.docbook
po/ru/docs/kded5/: man-kded5.8.docbook
po/sl/docs/kded5/: man-kded5.8.docbook
po/sl/docs/kded6/: man-kded6.8.docbook
po/sv/docs/kded5/: man-kded5.8.docbook
po/sv/docs/kded6/: man-kded6.8.docbook
po/tr/docs/kded5/: man-kded5.8.docbook
po/tr/docs/kded6/: man-kded6.8.docbook
po/uk/docs/kded5/: man-kded5.8.docbook
po/uk/docs/kded6/: man-kded6.8.docbook
src/: CMakeLists.txt  kded-index.qdoc  kded.cpp  kded.h  kded.qdocconf  kdedadaptor.cpp  kdedadaptor.h  kdedmodule.desktop  plasma-kded.service.in  plasma-kded6.service.in
src/snippets/: CMakeLists.txt  module.cpp
